--- a/qa/values.yaml
+++ b/qa/values.yaml
@@ -1,28 +1,28 @@
-replicaCount: 1
+replicaCount: 3
+
+image:
+  repository: us-central1-docker.pkg.dev/terraform-project-diana-396721/artemis
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "10.0.0" 
 
 service:
   type: ClusterIP
-  port: 80
-
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""  
+  port: 80 
   
 ingress:
   enabled: true
   className: "nginx"
-  annotations: {}
+  annotations: 
     ingress.kubernetes.io/ssl-redirect: "false"
     cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
     acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
-    - host: artemis-qa.treenetsolution.com
+    - host: artemis-stage.treenetsolution.com
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
+  tls: 
    - secretName: artemis-tls
      hosts:
-       - artemis-qa.treenetsolution.com
+       - artemis-stage.treenetsolution.com
