--- a/application/templates/deployment.yaml
+++ b/application/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
             httpGet:
               path: /
               port: http
-     
+          resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
