--- a/stage/values.yaml
+++ b/stage/values.yaml
@@ -18,11 +18,11 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
     acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
-    - host: artemis-qa.treenetsolution.com
+    - host: artemis-stage.treenetsolution.com
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: 
    - secretName: artemis-tls
      hosts:
-       - artemis-qa.treenetsolution.com
+       - artemis-stage.treenetsolution.com
