--- a/cert-manager-test/values.yaml
+++ b/cert-manager-test/values.yaml
@@ -1,1 +1,18 @@
 replicaCount: 3
+
+ingress:
+  enabled: true
+  className: "nginx"
+  annotations: 
+    ingress.kubernetes.io/ssl-redirect: "false"
+    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
+    acme.cert-manager.io/http01-edit-in-place: "true"
+  hosts:
+    - host: artemis-stage.treenetsolution.com
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: 
+   - secretName: artemis-tls
+     hosts:
+       - artemis-stage.treenetsolution.com
